# multi-agent-Coding-Assistant

./: README.md  api.py  md2pdf.py  pyproject.toml
agent/: graph.py  prompts.py  states.py  tools.py
agent/generated_projects/Colourful_Todo_App_20260603_011236/: index.html  script.js  styles.css
agent/generated_projects/Todo_App_20260603_011549/: index.html  script.js  style.css
agent/generated_projects/Todo_App_20260603_012600/: script.js  (+2 more)
frontend/: package-lock.json
frontend/landing-site/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.jsx  index.css
generated_project/: data.json  game_board.py  index.html  script.js  style.css  styles.css
generated_projects/Colorful_Todo_App_20260602_182417/: index.html
generated_projects/Colourful_Todo_App_20260602_181251/: index.html
generated_projects/Colourful_Todo_App_20260602_182629/: index.html
generated_projects/Simple_Calculator_Web_App_20260603_144719/: index.html  script.js  style.css
generated_projects/Tic_Tac_Toe_Game_20260603_000322/: player.py
generated_projects/To-Do_List_App_20260603_124212/: index.html  script.js  styles.css
generated_projects/Todo_App_20260602_181451/: index.html  style.css  styles.css
generated_projects/Weather_Dashboard_20260602_183519/: index.html
generated_projects/default/: database.py  index.html  models.py  script.js  style.css
generated_projects/default_project/: README.md  app.js  data.js  data.json  index.html  operations.py  package.json  script.js  style.css  styles.css  utils.py
(+41 files in other folders)
